Bug #209342.  Browser will come up at position 0,0.